# zettaranc-skill

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  SKILL.md  TODO.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  CONFIG_GUIDE.md  CONTRIBUTING.md  USER_GUIDE.md  v2.6.0-p2-integration.md
docs/adr/: 0001-retire-tushare-backend.md  0002-flat-data-mode.md
modules/: __init__.py  active_mktcap.py  akshare_client.py  backtest.py  cli.py  data_sync.py  database.py  intent_chat.py  intent_router.py  kline_data.py  portfolio_diagnosis.py  qcore_lake_client.py  screener.py  setup_wizard.py  strategies.py  trade_manager.py  trade_parser.py  trade_reviewer.py  tushare_client.py  watchlist.py  zettaranc_voice.py
modules/backtest/: __init__.py  __main__.py  _models.py  _multi.py  _portfolio.py  _single.py
modules/indicators/: __init__.py  core.py  data_layer.py  kirin_detector.py  price_patterns.py  volume_patterns.py  wave_theory.py
modules/indicators/price_patterns/: __init__.py  _bricks_patterns.py  _calculators.py  _divergence_macd.py  _double_needle_gun.py  _misc_patterns.py
modules/screener/: __init__.py  __main__.py  _data.py  _filters.py  _indicators.py  _models.py  _report.py  _scoring.py  _screen.py
modules/strategies/: __init__.py  base_strategies.py  compound_strategies.py  core.py  kirin.py  orchestrator.py  sell_signals.py  vectorized.py
scripts/: fetch_tushare_data.py  sync_db_test.py
tests/: test_active_mktcap.py  test_backtest.py  test_bugfix_regressions.py  test_console_encoding.py  test_data_clients.py  test_indicators.py  test_intent_router.py  test_kirin_detector.py  test_kline_window.py  test_screener.py  test_setup_wizard.py  test_trade_parser.py  test_wave_theory.py
