[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zettaranc-skill"
version = "2.4.0"
description = "zettaranc（万千）的思维框架与量化工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zettaranc-skill contributors"}
]
keywords = ["trading", "quantitative", "tushare", "technical-indicators", "bili"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "tushare>=1.4.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
zt = "modules.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
