[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zettaranc-skill"
version = "2.9.0"
description = "zettaranc（万千）的思维框架与量化工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zettaranc-skill contributors"}
]
keywords = ["trading", "quantitative", "akshare", "technical-indicators", "bili"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "akshare>=1.14.0",      # 默认数据源：免 token 现拉日线
    "pandas>=2.0.0",        # 数据处理
    "pyarrow>=14.0.0",      # 读取 qcore 本地 Parquet 数据湖
    "python-dotenv>=1.0.0", # .env 配置加载
    "requests>=2.28.0",     # HTTP
]

[project.optional-dependencies]
# Tushare 后端（DATA_MODE=jnb，已休眠保留）。见 docs/adr/0001-retire-tushare-backend.md
jnb = [
    "tushare>=1.4.0",
]
# 语料采集工具（下载/转写 B 站音频，跑行情用不到）
corpus = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
zt = "modules.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
